--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "vscode": "^1.6.0"
   },
   "activationEvents": [
-    "onCommand:extension.fileFromTemplate",
+    "onCommand:extension.fileFromTemplate"
   ],
   "main": "./target/extension",
   "contributes": {
