--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
+    "vscode:prepublish": "npm run build",
+    "build": "tsc",
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
