--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "commands": [
       {
         "command": "extension.fileFromTemplate",
-        "title": "New file from template",
+        "title": "Generate file",
         "category": "Files"
       }
     ],
