--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "@types/node": "^6.0.45",
-    "typescript": "^2.0.3",
+    "typescript": "2.9.2",
     "vscode": "^1.0.3"
   }
 }
